# aiarena-client-gui

./: .eslintcache  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  settings.json
.github/: dependabot.yml
.github/workflows/: publish.yml  test_on_pr.yml
.quasar/: artifacts.json  client-entry.js  import-quasar.js
backend/: Cargo.toml  README.md  settings.json
backend/src/: api_structs.rs  bots.rs  errors.rs  helpers.rs  lib.rs  macros.rs  main.rs  paths.rs  results_data.rs  routes.rs  run_game_data.rs  server.rs  settings_data.rs  supervisor.rs
backend/src/bot/: aiarena_bots.rs  ladder_bots.rs  mod.rs
backend/src/files/: md5_hashes_file.rs  mod.rs  results_data_file.rs  settings_data_file.rs
backend/src/json_structs/: file_json.rs  mod.rs  results_data.rs  run_game_data.rs
backend/src/server/: api_structs.rs  mod.rs  routes.rs
backend/static/: index.html  settings.html
backend/static/js/: main.js
frontend/: .gitignore
frontend/src/: App.vue  index.html  rpc.js
frontend/src/components/: Footer.vue  InputForm.vue  TaskList.vue
public/: index.html  splashscreen.html
src/: App.js  Debug.js  Home.js  ResultsTable.js  Settings.js  index.css  index.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  cmd.rs  main.rs
src-tauri/static/: settings.html  watch.html
