[package]
name = "aiarena-client-GUI"
version = "0.1.0"
authors = ["danielvschoor <danielvanschoor1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiarena-client-gui-backend = {path="./backend"}
actix-web-static-files = "3.0"
web-view = "0.7.3"
serde_derive = "1.0.125"
serde = "*"
serde_json = "1.0"

[build-dependencies]
actix-web-static-files = "3.0"
aiarena-client-gui-backend = {path="./backend"}