[package]
name = "aiarena-client-gui-backend"
version = "0.1.0"
authors = ["danielvschoor <danielvanschoor1997@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "aiarena_client_gui_backend_lib"
crate-type = ['rlib']

[[bin]]
name = "aiarena_client_gui_backend_bin"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
rand = ">=0.5.3"
env_logger ="^0.8"
actix = "^0.11"
actix-web = {version="^3.3.2", features=["rustls"]}
handlebars = { version = "^3.0.0", features = ["dir_source"] }
serde_json = "^1.0"
actix-web-static-files = "^3.0"
serde = "^1.0"
rustls = "^0.18"
crossbeam = ">=0.5"
paperclip = { git="https://github.com/wafflespeanut/paperclip.git", features = ["actix", "paperclip-macros"] }

[dependencies.rust-arenaclient]
version = "*"
git="https://github.com/aiarena/rust-arenaclient.git"
branch="client-frontend"
default-features = false
features = ["no-pyo3"]

[build-dependencies]
actix-web-static-files = "^3.0"

