[package]
name = "aiarena-client-gui-backend"
version = "0.1.0"
authors = ["danielvschoor <danielvanschoor1997@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "aiarena_client_gui_backend_lib"
crate-type = ['rlib']

[[bin]]
name = "aiarena_client_gui_backend_bin"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
rand = {version = ">=0.5.3", default-features=false}
env_logger ={version="^0.8", default-features=false}
actix-web = {version="^3.3.2", features=["rustls"], default-features=false}
serde_json = {version = "^1.0"}
serde = {version ="^1.0", default-features=false}
actix-cors = "0.6.2"
directories = "3.0"
actix-rt = "1.1.0"
zip = {version="0.5",  default-features=false}
anyhow = {version="1"}
itertools = {version="0.10", default-features=false}
futures = {version ="0.3.15", default-features=false}
fs2 = "0.4.3"
async-rwlock = "1.3.0"

[dependencies.rust-arenaclient]
version = "0.1.20"
git="https://github.com/aiarena/rust-arenaclient.git"
branch="master"
default-features = false
features = ["no-pyo3"]

[build-dependencies]
