[package]
name = "ai-arena-client-gui"
version = "0.2.6"
description = "AI-Arena GUI"
authors = [ "you" ]
license = ""
repository = ""
default-run = "ai-arena-client-gui"
edition = "2018"
build = "src/build.rs"

[dependencies]
aiarena-client-gui-backend = { path = "../backend" }
serde_json = "^1.0"
serde = { version = "^1.0", features = [ "derive" ] }
env_logger = "^0.8"
chrono = "0.4.19"

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["shell-all", "dialog-open", "notification-all", "updater"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
aiarena-client-gui-backend = { path = "../backend" }
tauri-build = { version = "1.0.0-beta.4" }
